--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-fontawesome": "^1.7.1",
+    "react-modal": "^3.11.2",
     "reactstrap": "^8.4.1"
   }
 }
