--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-modal": "^3.11.2",
+    "react-select": "^3.1.0",
     "reactstrap": "^8.4.1"
   }
 }
