--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "prop-types": "^15.7.2",
+    "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
+    "react-datepicker": "^2.14.1",
     "react-fontawesome": "^1.7.1",
     "react-modal": "^3.11.2",
     "react-select": "^3.1.0",
