--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,5 +28,9 @@
     "react-modal": "^3.11.2",
     "react-select": "^3.1.0",
     "reactstrap": "^8.4.1"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^10.0.4",
+    "react-router-dom": "^5.1.2"
   }
 }
