--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,10 @@
   "name": "cds-builder-tools",
   "version": "0.0.1",
   "description": "Tools for building clinical decision support apps",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "react-scripts test",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -24,13 +25,22 @@
     "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
     "react-datepicker": "^2.14.1",
+    "react-dom": "^16.10.2",
     "react-fontawesome": "^1.7.1",
     "react-modal": "^3.11.2",
     "react-select": "^3.1.0",
     "reactstrap": "^8.4.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^10.0.4",
-    "react-router-dom": "^5.1.2"
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-react": "^7.6.3",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/react": "^9.3.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "rollup": "^1.25.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-postcss": "^2.0.3"
   }
 }
